fix: footer and navbar

--- a/indexEN.html
+++ b/indexEN.html
@@ -217,7 +217,7 @@
           </div>
         </div>
     
-        <!-- Video Section -->
+        <!-- Video Section 
         <div class="mt-5 text-center">
           <h2 class="mb-3">Video About the Product:</h2>
           <div class="ratio ratio-16x9">
@@ -231,6 +231,7 @@
           </div>
         </div>
       </div>
+      -->
     </section>
 
     <!-- ABOUT -->
@@ -259,7 +260,7 @@
         </div>
       </div>
 
-        <!-- Video Section -->
+        <!-- Video Section 
         <div class="mt-5 text-center">
           <h2 class="mb-3">Video About the Team:</h2>
           <div class="ratio ratio-16x9">
@@ -273,7 +274,7 @@
           </div>
         </div>
       </div>
-
+-->
     </section>
 
     
