--- a/index.html
+++ b/index.html
@@ -110,9 +110,10 @@
         <p class="paragraph text-white lead">
           Transporta productos peligrosos y déjanos toda la seguridad en nuestras manos
         </p>
-        <a href="#about" class="btn btn-light">
-          Saber más
-        </a>
+<a href="#about" class="btn btn-lg text-white my-4"
+   style="background-color: #f57c00; font-weight: bold; padding: 10px 30px; font-size: 1.5rem;">
+  Saber más
+</a>
       </div>
     </div>
     <!-- SERVICES -->
@@ -229,11 +230,15 @@
               Únete y sé parte de esta familia, que ayudándonos mutuamente
               garantizamos un transporte tranquilo y sin preocupaciones.
             </p>
-            <a href="#" class="btn btn-warning mt-3">
+<a href="#about" class="btn btn-lg text-white my-4"
+   style="background-color: #f57c00; font-weight: bold; padding: 10px 30px; font-size: 1.5rem;">
               Leer más <i class="fa-solid fa-chevron-right"></i>
             </a>
           </div>
         </div>
+              </div>
+      
+    </section>
      <!--
         <div class="mt-5 text-center">
           <h2 class="mb-3">Video About the Team:</h2>
@@ -385,72 +390,81 @@
         </div>
       </div>
     </section>
-
-<!-- FOOTER -->
-<footer class="bg-dark text-white pt-5 w-100" id="contact">
-  <div class="container-fluid px-5">
+      </div>
+          </section>
+    <!-- FOOTER -->
+<footer class="page-footer text-md-left bg-dark text-white" id="contact">
+  <div class="container py-5">
     <div class="row g-4">
+      <div class="col-lg-3 col-md-6">
+        <h1 class="text-uppercase font-weight-bold mb-4 level-1-title-white fw-bold""
+            >
+              TrackTox
+            </h1>
+            <p class="text-white paragraph">
+              "Protege tu carga, controla tu ruta. Tecnología IoT para un transporte de combustible más seguro."
+            </p>
+            <a href="#"
+              ><i class="fa-brands fa-facebook text-dark mx-1 lead"></i
+            ></a>
+            <a href="#"
+              ><i class="fa-brands fa-linkedin text-dark mx-1 lead"></i
+            ></a>
+            <a href="#"
+              ><i class="fa-brands fa-twitter text-dark mx-1 lead"></i
+            ></a>
+          </div>
 
-      <!-- Brand and Description -->
-      <div class="col-lg-4 col-md-6">
-        <h3 class="text-uppercase fw-bold mb-3">TrackTox</h3>
-        <p class="mb-3">
-          "Protege tu carga, controla tu ruta. Tecnología IoT para un transporte de combustible más seguro."
-        </p>
-        <div>
-          <a href="#" class="text-white me-3"><i class="fab fa-facebook fa-lg"></i></a>
-          <a href="#" class="text-white me-3"><i class="fab fa-linkedin fa-lg"></i></a>
-          <a href="#" class="text-white"><i class="fab fa-twitter fa-lg"></i></a>
+          <div class="col-lg-2 col-md-2 mx-auto">
+            <h5 class="text-uppercase font-weight-bold mb-4">
+              Nuestras redes sociales
+            </h5>
+            <ul class="list-unstyled">
+              <li class="mb-1">
+                <a href="#"
+                  ><i class="fa-brands fa-facebook mx-1 lead text-white"> </i
+                  >Página de Facebook</a
+                >
+              </li>
+              <li class="mb-1">
+                <a href="#"
+                  ><i class="fa-brands fa-instagram mx-1 lead text-white"> </i
+                  >Cuenta de Instagram</a
+                >
+              </li>
+              <li class="mb-1">
+                <a href="#"
+                  ><i class="fa-brands fa-tiktok mx-1 lead text-white"> </i
+                  >Cuenta de TikTok</a
+                > 
+              </li>
+            </ul>
+          </div>
+
+          <div class="col-lg-3 col-xs-12 location">
+            <h5 class="text-uppercase font-weight-bold mb-4">Contacto</h5>
+            <p class="d-flex align-items-center">
+              <i class="fa-solid fa-location-dot text-success mx-2 lead"></i>
+              Lima , Perú.
+            </p>
+            <p class="d-flex align-items-center">
+              <i class="fa-solid fa-phone text-success mx-2 lead"></i> (+51) 958 452 144
+            </p>
+            <p class="d-flex align-items-center">
+              <i class="fa-solid fa-envelope text-success mx-2 lead"></i>
+              TrackTox@info.com
+            </p>
+          </div>
         </div>
       </div>
-
-      <!-- Social Media Links -->
-      <div class="col-lg-4 col-md-6">
-        <h5 class="text-uppercase fw-bold mb-3">Síguenos en</h5>
-        <ul class="list-unstyled">
-          <li class="mb-2">
-            <a href="#" class="text-white text-decoration-none">
-              <i class="fab fa-facebook me-2"></i>Página de Facebook
-            </a>
-          </li>
-          <li class="mb-2">
-            <a href="#" class="text-white text-decoration-none">
-              <i class="fab fa-instagram me-2"></i>Cuenta de Instagram
-            </a>
-          </li>
-          <li>
-            <a href="#" class="text-white text-decoration-none">
-              <i class="fab fa-tiktok me-2"></i>Cuenta de TikTok
-            </a>
-          </li>
-        </ul>
-      </div>
-
-      <!-- Contact Information -->
-      <div class="col-lg-4 col-md-12">
-        <h5 class="text-uppercase fw-bold mb-3">Contacto</h5>
-        <p class="mb-2"><i class="fas fa-map-marker-alt me-2 text-success"></i>Lima, Perú</p>
-        <p class="mb-2"><i class="fas fa-phone me-2 text-success"></i>(+51) 958 452 144</p>
-        <p><i class="fas fa-envelope me-2 text-success"></i>TrackTox@info.com</p>
-      </div>
-
-    </div>
-
-    <hr class="border-top border-light my-4">
-
-    <div class="text-center pb-3">
-      <small>&copy; 2025 TrackTox. Todos los derechos reservados.</small>
-    </div>
-  </div>
-</footer>
-
-
-
+    </footer>
     <script
+
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
       crossorigin="anonymous"
     ></script>
     <script src="assets/js/index.js"></script>
   </body>
+  
 </html>
