fix: translation issues and margin corrections

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
   </head>
   <body>
     <!-- NAVBAR -->
-<nav class="navbar navbar-expand-lg custom-navbar py-3 fixed-top">
-      <div class="container">
-        <a class="navbar-brand d-flex align-items-center h1 fw-bold" href="#">
+<nav class="navbar navbar-expand-lg custom-navbar py-3 fixed-top fs-4">
+  <div class="container">
+    <a class="navbar-brand d-flex align-items-center h1 fw-bold fs-3" href="#">
           <img
             src="./assets/images/Logo.png"
             alt="logo"
@@ -105,9 +105,12 @@
         <h1 class="text-white">
           Bienvenido a
           <span class="fw-bold level-2-title"> ChemTrack: </span> Tu Guia para el 
-          transporte de productos peligrosos
+
         </h1>
-        <p class="paragraph text-white lead">
+         <h1 class="text-white">
+          transporte de productos peligrosos
+                </h1>
+<p class="text-white fs-3 my-4">
           Transporta productos peligrosos y déjanos toda la seguridad en nuestras manos
         </p>
 <a href="#about" class="btn btn-lg text-white my-4"
@@ -127,7 +130,7 @@
                 <div class="h1 mb-3">
                   <i class="fa-solid fa-car" style="color: #FCB658"></i>
                 </div>
-                <h2 class="level-2-title card-title mb-3">Servicio de Transporte</h2>
+                <h2 class="level-2-title card-title fw-bold mb-3">Servicio de Transporte</h2>
                 <p class="card-text paragraph lead">
                   Brindamos un servicio de transporte de productos peligrosos,
                   implementando la supervisión tanto del conductor como el monitoreo
@@ -143,7 +146,7 @@
                 <div class="h1 mb-3">
                   <i class="fa-solid fa-eye" style="color: #FCB658"></i>
                 </div>
-                <h2 class="level-2-title card-title mb-3">Monitoreo en Tiempo Real</h2>
+                <h2 class="level-2-title card-title fw-bold mb-3">Monitoreo en Tiempo Real</h2>
                 <p class="card-text paragraph lead">
                   Ofrecemos un sistema de monitoreo en tiempo real que pueda
                   detectar posibles fugas de gases combustibles (GNV) durante el
@@ -159,7 +162,7 @@
                 <div class="h1 mb-3">
                   <i class="fa-solid fa-microchip" style="color: #FCB658"></i>
                 </div>
-                <h2 class="level-2-title card-title mb-3">Uso de Sensores IoT</h2>
+                <h2 class="level-2-title card-title fw-bold mb-3">Uso de Sensores IoT</h2>
                 <p class="card-text paragraph lead">
                   Los vehículos contarán con sensores que supervisarán el material
                   de carga y se notificará en caso de existir una fuga. Serán
@@ -175,7 +178,7 @@
                 <div class="h1 mb-3">
                   <i class="fa-solid fa-shield-heart" style="color: #FCB658"></i>
                 </div>
-                <h2 class="level-2-title card-title mb-3">Transporte Seguro</h2>
+                <h2 class="level-2-title card-title fw-bold mb-3">Transporte Seguro</h2>
                 <p class="card-text paragraph lead">
                   Juntos podremos transportar materiales y productos peligrosos sin
                   ningún tipo de peligro. Déjanos ayudarte y cuidarte en toda tu
@@ -256,12 +259,13 @@
       
     </section>
 -->
+        </section>
     <!-- TESTIMONIALS -->
-<section class="p-5" id="testimonials" style="background-color: #047211;">
+<section class="p-5" id="testimonials" style="background-color: #111A23;">
       <div class="container py-5">
-        <h1 class="text-center level-1-title-black fw-bold">Testimonios</h1>
+        <h1 class="text-center level-1-title-white fw-bold">Testimonios</h1>
 
-        <p class="lead text-center text-black mb-5 paragraph">
+        <p class="lead text-center text-white mb-5 paragraph">
           Esto es lo que nuestros clientes opinan de nosotros
         </p>
 
