--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <li class="nav-item">
               <a
                 class="nav-link"
-                href=""
+                href="https://chemtrack-app.netlify.app/services"
                 >Aplicación</a
               >
             </li>
